# shuttle-cch23

./: .gitignore  Cargo.toml  README.md
migrations/: 20231214122351_init.down.sql  20231214122351_init.up.sql
src/: main.rs
src/days/: d01.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  mod.rs
templates/: page.html
