[package]
name = "cch23-bbarekas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
base64 = "0.21.5"
chrono = "0.4.31"
headers = "0.4"
http = "1.0.0"
image = { version = "0.24.7", features = [] }
reqwest = { version = "0.11.22", features = ["json"] }
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
shuttle-persist = "0.35.0"
serde = "1.0.193"
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["fs"] }
tokio = "1.28.2"
tracing = "0.1.40"
time = "0.3.30"
ulid = { version = "1.1.0", features = ["uuid"] }
uuid = "1.6.1"
