[package]
name = "cch23-bbarekas"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
base64 = "0.21.5"
chrono = "0.4.31"
dotenv = "0.15.0"
emojis = "0.6.1"
git2 = { version = "0.18.1", features = [] }
google_maps = "3.4.0"
headers = "0.4"
http = "1.0.0"
image = { version = "0.24.7", features = [] }
reqwest = { version = "0.11.22", features = ["json"] }
s2 = "0.0.12"
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.2"
shuttle-persist = "0.35.2"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tokio = "1.28.2"
tracing = "0.1.40"
time = "0.3.30"
ulid = { version = "1.1.0", features = ["uuid"] }
uuid = "1.6.1"
futures = "0.3.29"
tar = "0.4.40"
tempfile = "3.8.1"
tempdir = "0.3.7"
